--- a/setup.cfg
+++ b/setup.cfg
@@ -5,13 +5,12 @@ ignore =
     bootstrap.py
 
 [isort]
-force_alphabetical_sort=True
-force_single_line=True
-lines_after_imports=2
-line_length=200
-not_skip=__init__.py
-
-
+# black compatible Plone isort rules:
+profile = black
+force_alphabetical_sort = True
+force_single_line = True
+lines_after_imports = 2
 
 [bdist_wheel]
 universal = 1
+
